--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         }
     ],
     "require": {
-        "php" : "~5.5|~7.0"
+        "php" : "~5.5|~7.0",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "phpspec/phpspec" : "^2.5",
