--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "phpspec/phpspec" : "^2.5",
         "henrikbjorn/phpspec-code-coverage" : "^2.0",
         "scrutinizer/ocular": "^1.1",
-        "squizlabs/php_codesniffer": "^2.3"
+        "squizlabs/php_codesniffer": "^2.3",
+        "behat/behat": "^3.1"
     },
     "autoload": {
         "psr-4": {
